# nexell_swallow_apps_testsuite

./: Makefile
adc/: Makefile  adc_test.c  adc_test.h  readme.txt
allocator_test/: .gitignore  Makefile  allocator-test.cpp
cam_test/: Makefile  cam_test_onedevice.cpp  cam_test_thread.cpp
camera_test/: Makefile  cam-test.cpp  option.cpp
camera_test_onedevice/: .gitignore  Makefile  cam-test-onedevice.cpp  option.cpp  option.h
cpu/: Makefile  cpuinfo_test.c  (+1 more)
video_api_test/src/: Android.mk  CodecInfo.cpp  CodecInfo.h  DrmRender.cpp  DrmRender.h  Makefile.am  MediaExtractor.cpp  MediaExtractor.h  NX_AndroidRenderer.cpp  NX_AndroidRenderer.h  NX_CV4l2Camera.cpp  NX_CV4l2Camera.h  NX_Queue.cpp  NX_Queue.h  NX_Semaphore.cpp  NX_Semaphore.h  NX_V4l2Utils.cpp  NX_V4l2Utils.h  Util.cpp  Util.h  VideoDecTest.cpp  VideoEncTest.cpp  main.cpp
video_api_test/src/ffmpeg/ffmpeg-2.8.6-arm32/include/libavformat/: avformat.h
video_api_test/src/ffmpeg/ffmpeg-2.8.6-arm32/lib/: libavdevice.so.56.4.100  libavfilter.so.5.40.101  libavformat.so.56.40.101  libavutil.so.54.31.100  libswresample.so.1.2.101
video_api_test/src/ffmpeg/ffmpeg-2.8.6-arm32/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc
video_api_test/src/ffmpeg/ffmpeg-2.8.6-arm64/include/libavformat/: avio.h
video_api_test/src/ffmpeg/ffmpeg-2.8.6-arm64/lib/: libavdevice.so.56.4.100  libavfilter.so.5.40.101  libavformat.so.56.40.101  libavutil.so.54.31.100  libswresample.so.1.2.101
video_api_test/src/ffmpeg/ffmpeg-2.8.6-arm64/lib/pkgconfig/: libavcodec.pc
(+241 files in other folders)
